package com.udacity.project4

import android.app.Activity
import android.app.Application
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.matcher.RootMatchers
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import com.udacity.project4.utils.EspressoIdlingResource
import kotlinx.coroutines.delay
import kotlinx.coroutines.runBlocking
import org.hamcrest.CoreMatchers
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.KoinTest
import org.koin.test.get

@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest : KoinTest {

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application

    private val dataBindingIdlingResource = DataBindingIdlingResource()

    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().register(dataBindingIdlingResource)
    }

    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
    }

    @Test
    fun createNewReminder() = runBlocking {
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)
        delay(1000)

        Espresso.onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.reminderTitle)).perform(ViewActions.replaceText("title1"))
        Espresso.onView(withId(R.id.reminderDescription))
            .perform(ViewActions.replaceText("description1"))

        Espresso.onView(withId(R.id.saveReminder)).perform(ViewActions.click())

        Espresso.onView(withText("title1")).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )
        Espresso.onView(withText("description1")).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )

        activityScenario.close()
    }

    @Test
    fun createNewReminderAndSelectCustomLocation() = runBlocking {

        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)
        delay(1000)

        Espresso.onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.reminderTitle))
            .perform(ViewActions.typeText("title1"), ViewActions.closeSoftKeyboard())
        Espresso.onView(withId(R.id.reminderDescription))
            .perform(ViewActions.replaceText("description1"))

        Espresso.onView(withId(R.id.saveReminder)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.selectLocation)).perform(ViewActions.click())
        delay(2000)

        Espresso.onView(withId(R.id.map)).perform(ViewActions.longClick())
        delay(2000)

        Espresso.onView(withId(R.id.saveLastReminder)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.saveReminder)).perform(ViewActions.click())

        Espresso.onView(withText("title1")).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )
        Espresso.onView(withText("description1")).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )
        Espresso.onView(withText("Custom Marker")).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )
        Espresso.onView(withText(R.string.reminder_saved)).inRoot(
            RootMatchers.withDecorView(
                CoreMatchers.not(
                    CoreMatchers.`is`(
                        getActivity(
                            activityScenario
                        ).window.decorView
                    )
                )
            )
        ).check(ViewAssertions.matches(isDisplayed()))

        activityScenario.close()
    }

    @Test
    fun createNewReminderAndSelectPoiLocation() = runBlocking {

        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)
        delay(1000)

        Espresso.onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.reminderTitle))
            .perform(ViewActions.typeText("title1"), ViewActions.closeSoftKeyboard())
        Espresso.onView(withId(R.id.reminderDescription))
            .perform(ViewActions.replaceText("description1"))

        Espresso.onView(withId(R.id.saveReminder)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.selectLocation)).perform(ViewActions.click())
        delay(2000)

        Espresso.onView(withId(R.id.map)).perform(ViewActions.longClick())
        delay(2000)

        Espresso.onView(withId(R.id.saveLastReminder)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.saveReminder)).perform(ViewActions.click())

        Espresso.onView(withText("title1")).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )
        Espresso.onView(withText("description1")).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )
        Espresso.onView(withText(R.string.reminder_saved)).inRoot(
            RootMatchers.withDecorView(
                CoreMatchers.not(
                    CoreMatchers.`is`(
                        getActivity(
                            activityScenario
                        ).window.decorView
                    )
                )
            )
        ).check(ViewAssertions.matches(isDisplayed()))

        activityScenario.close()
    }

    @Test
    fun createNewReminderAndSelectLocationWithNotTitle() = runBlocking {
        val activityScenario =
            ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)
        delay(1000)

        Espresso.onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.reminderTitle))
            .perform(ViewActions.typeText(""), ViewActions.closeSoftKeyboard())

        Espresso.onView(withId(R.id.reminderDescription))
            .perform(ViewActions.replaceText("description1"))

        Espresso.onView(withId(R.id.saveReminder)).perform(ViewActions.click())

        Espresso.onView(withText(R.string.err_enter_title)).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )

        activityScenario.close()
    }

    @Test
    fun createNewReminderAndSelectLocationWithNotLocation() = runBlocking {
        val activityScenario =
            ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)
        delay(1000)

        Espresso.onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())

        Espresso.onView(withId(R.id.reminderTitle))
            .perform(ViewActions.typeText("title1"), ViewActions.closeSoftKeyboard())

        Espresso.onView(withId(R.id.reminderDescription))
            .perform(ViewActions.replaceText("description1"))

        Espresso.onView(withId(R.id.saveReminder)).perform(ViewActions.click())

        Espresso.onView(withText(R.string.err_select_location)).check(
            ViewAssertions.matches(
                isDisplayed()
            )
        )

        activityScenario.close()
    }

    // Aux function to test Toast
    private fun getActivity(activityScenario: ActivityScenario<RemindersActivity>): Activity {
        lateinit var activity: Activity
        activityScenario.onActivity {
            activity = it
        }
        return activity
    }
}
